--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,16 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.beryx.jlink' version '2.24.4'
+}
+
+java {
+    modularity.inferModulePath.set(true)
+}
+
+application {
+    mainModule = 'hellofx' // name defined in module-info.java
+    mainClass = 'hellofx.HelloWorldFX'
 }
 
 group 'org.example'
@@ -16,6 +26,15 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
+mainClassName = "hellofx.HelloWorldFX"
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'hellofx'
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testImplementation 'org.assertj:assertj-core:3.23.1'
@@ -28,4 +47,8 @@ test {
     useJUnitPlatform()
 }
 
-mainClassName = 'org.example.HelloWorldFX'
+jar {
+    manifest {
+        attributes 'Main-Class': 'hellofx.HelloWorldFX'
+    }
+}
